2010-08-09  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/parser/input.c ,
 * src/frontend/plotting/x11.c ,
 * src/main.c :
    fix a busy waiting loop when using editline. rl_event_hook must block until
      there is some work to do. (select on stdin and the X11 socket).
    For non-X11, don't use rl_event_hook at all.

2010-08-09  Robert Larice
 * src/spicelib/analysis/cktmapn.c :
    bug fix, incorrect indirection level, yet without consequence,
      function CKTmapNode() is unused.

2010-08-09  Robert Larice
 * src/spicelib/parser/inpgval.c :
    fix assignment to a member of union IFvalue

2010-08-07  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/frontend/parse-bison.y :
    bug fix,
      avoid segfault, caused when parsing an unknown function in parse-bison.y

2010-08-07 Dietmar Warning
 spicelib/devices/*/b4soimask.c, csw*.c, mos6load.c, soi3load.c, swnoise.c: 
    fix some wrong 'double' to 'int' assignments

2010-08-07  Robert Larice
 * src/main.c :
    bug fix, segfault caused by an ancient `editline' workaround
    (bug tracker ID: 2966977, `segfault with editline')

2010-08-07  Robert Larice
 * src/tclspice.c ,
 * src/include/tclspice.h :
    bug fix, I've recently broken compilation of tclspice.
    - missing #include
    - use the GENmodel and GENinstance type instead of void*
    - muffle some type warnings.

2010-08-07  Robert Larice
 * configure.in :
    for gcc, don't report `unused parameter' Warnings
 * src/Makefile.am
    (bug tracker ID: 3019263)
    add missing $(EXEEXT) for cygwin, thank you marco atzeri

2010-08-06 Dietmar Warning
 * spicelib/parser/inp2q.c: add prototype for controlled_exit
 * frontend/com_measure2.c, inp.c, inpcom.c, vectors.c: fallback for not handled enumeration values in switch

2010-08-04  Robert Larice
 * src/frontend/control.c :
    fix an ancient bug, trampling on freed memory causing segfaults and sickness.